# clinics-card-clients-info

./: .gitignore  pyproject.toml  req.txt
app/: __main__.py  config.py  excel.py  utils.py
app/clinics_card/: base.py  entities.py  invoices.py  patients.py  payments.py  plans.py  visits.py
