[tool.poetry]
name = "clinics-card-clients-info"
version = "0.1.0"
description = ""
authors = ["TyPaporotnyk <daniil.svadkovsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
gspread = "^6.1.4"
oauth2client = "^4.1.3"
pydantic-settings = "^2.7.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
